--- a/fuzzer/requirements.txt
+++ b/fuzzer/requirements.txt
@@ -1,11 +1,10 @@
-appdirs==1.4.0
-flake8==3.3.0
-mccabe==0.6.1
-packaging==16.8
-pycodestyle==2.3.1
-pyflakes==1.5.0
-pyparsing==2.1.10
-requests==2.13.0
-SimpleWebSocketServer==0.1.0
-six==1.10.0
-SQLAlchemy==1.1.5
+appdirs>1.4.0
+flake8>3.3.0
+packaging>16.8
+pycodestyle>2.3.1
+pyflakes>1.5.0
+pyparsing>2.1.10
+requests>2.13.0
+SimpleWebSocketServer>0.1.0
+six>1.10.0
+SQLAlchemy>1.1.5
