--- a/fuzzer/requirements.txt
+++ b/fuzzer/requirements.txt
@@ -1,10 +1,26 @@
-appdirs>1.4.0
-flake8>3.3.0
-packaging>16.8
-pycodestyle>2.3.1
-pyflakes>1.5.0
-pyparsing>2.1.10
-requests>2.13.0
-SimpleWebSocketServer>0.1.0
-six>1.10.0
-SQLAlchemy>1.1.5
+appdirs==1.4.3
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+entrypoints==0.3
+flake8==3.7.7
+Flask==1.0.2
+Flask-SocketIO==3.3.2
+Flask-SQLAlchemy==2.3.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+packaging==19.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pyparsing==2.4.0
+python-engineio==3.5.1
+python-socketio==3.1.2
+requests==2.21.0
+SimpleWebSocketServer==0.1.1
+six==1.12.0
+SQLAlchemy==1.3.2
+urllib3==1.24.1
+Werkzeug==0.15.2
